styles.css
@import url(http://fonts.googleapis.com/css?family=Asap:400,700|Oswald:400,300,700);

body {
	margin:0;
	width:100%;
	height:100%;
	
}

a {
	text-decoration:none;
}

/*HEADER STARTS HERE*/

header {
	background:url(train.jpg);	
	background-size:cover;
	background-position:center;
	background-repeat:no-repeat;
	background-attachment:fixed;
	height:400px;
	width:100%;

}


.header {
	background:rgba(33, 136, 119, 0.94);
	height:100%;
	font-family:'Oswald';
	padding-right:1%;
	width:100%;

}

.container {
	width:960px;
	margin:0 auto;
	position:relative;
}

.header h1 {
	color:white;
	font-size:82px;
	padding-top:80px;
	margin-bottom:10px;
	text-align: center;
	
}

.subtitle {
	font-weight: 300;
	font-size:20px;
	text-align: center;
	color:rgb(49, 48, 48);
	margin-top:-8px;
}

.nav-links {
	font-weight: 300;
	font-size: 20px;
	position:absolute;
	right:0;
	font-weight:300;
	padding-left:10px;
}

.nav-links a {
	text-decoration: none;
	color:white;
	padding-right:10px;
	font-weight: 300;
}

.nav-links a:hover {
	color:rgba(16, 81, 141, 1);
}

.mobile-links {
	width:38%;
	margin:0 auto;
	margin-top:40px;
}

.nav-links2 {
	text-decoration: none;
	color:white;
	text-align:center;
	font-weight: 300;
	display:none;
}

.nav-links2 a {
	text-decoration:none;
	color:white;
}
.nav-links2 a:first-child {
	margin-right:32px;
}

.nav-links2 a:hover {
	color:rgba(16, 81, 141, 1);
}

/*BODY STARTS HERE*/

.wrapper {
	background:white;
	width:960px;
	margin:0 auto;
}

.main {
	display:inline-block;
	width:64%;
	font-family:"Asap";
}

.main h1 {
	font-family:"Oswald";
	font-size:45px;
	color:rgb(45, 100, 23);
	text-transform:uppercase;
	margin-bottom:-5px;
}

.main img {
	width:25px;
	height:25px;
	border-radius:10px;
	display:inline-block;
}

.credits span{
	color:rgb(0, 128, 87)
}

.credits {
	display:inline-block;
	color:grey;
	font-size:14px;
}

.text blockquote {
	font-size:25px;
	color:rgb(0, 128, 87)
}

.credits a {
	color:grey;
}

.comments-box {
	display:inline-block;
	width:150px;
	position:relative;
	background:rgb(167, 186, 204);
	height:30px;
}

.comments-box p {
	padding-left: 20px;
	color: white;
	display: inline;
	position: absolute;
	top: -8px;
}

.comments img {
	border-radius: 0px;
	height:30px;
	width:30px;
}


/*SIDEBAR STYLES*/


.sidebar {
	display:inline-block;
	width:32%;
	vertical-align: top;
	position:relative;
	height:100%;
}

.contact-image img {
	margin: 0 auto;
	border-radius: 100px;
	height: 102px;
	display:block;
	margin-top:20px;
}

.contact {
	display:block;
	margin:0 auto;
}

.contact h3 {
	
	font-weight:300;
	font-family:'oswald';
	font-size:25px;
	color:rgb(45, 100, 23);
	margin-bottom:0;
	margin-top:0;
	margin-left:35%;
}

.contact li {
	margin-top:-1px;
	margin-left:5	px;
	display:inline;
	padding:0;
}

.contact ul {
	margin:0	;
}

.contact a {
	color:grey;
	font-family:'asap';
}

.advertisement {
	width: 88%;
	margin: 0 auto;
	margin-top: 20px;
	margin-left: 23px;
	display: initial;
}


/*footer*/

footer {
	height: 151px;
	margin-top: 30px;
	background: rgba(33, 136, 119, 0.94);
	width: 100%;
	position:relative;
}

.footer-info {
	width: 80%;
	margin: 0 auto;

}

footer img {
	height:50%;
	margin-top:40px;
}

footer p {
	display: inline-block;
	position: absolute;
	padding-bottom: -48px;
	bottom: 42px;
	padding-left: 13px;
	color: rgb(1, 83, 14);
}


@media (max-width:980px) {
	.header h1 {
		font-size:60px;
	}
	.container {
		width:720px
	}
	.wrapper {
		width:720px;
	}
	.main h1 {
		font-size:38px;
	}
	.contact-image img {
		margin-left:25%;
	}
	.contact h3 {
		margin-left:28%;	
		margin-top:0;	;
	}
	.contact li {
		font-size:12px;
		margin-top:0;
		margin-left:0;
	}
}

@media (max-width:720px) {
	header {
		height:280px;
		background:white;
	}
	.header h1 {
		font-size:45px;
	}
	.header span {
	}
	.nav-links {
		display:none;
	}
	.nav-links2 {
		display:inherit;
	}
	.container {
		width:540px;
	}
	.wrapper {
		width:540px;
	}
	.main {
		width:100%;
	}
	.main h1 {
		font-size:30px;
	}
	.text blockquote {
		font-size:22px;
	}
	.sidebar {
		display: block;
		width: 100%;
		height: initial;
	}
	.contact-image img {
		margin-left:39%;
	}
	.contact {
		margin-left:27%	;

	}
	.contact h3 {
		margin-left:70px;
	}
	.advertisement {
		width: 39%;
		display: inherit;
		margin: 0 auto;
		margin-top: 17px;
		text-align: center;
	}
}

@media (max-width:560px) {
	header {
		height:250px;
	}
	.header h1 {
		font-size:30px;
	}
	.container {
		width:450px
	}
	.wrapper {
		width:450px;
	}
	.main h1 {
		font-size: 25px;
	}
	.main img {
		display:none ;
	}
	.text blockquote {
		font-size: 18px;
	}
}

